// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion [common] example testing should match snapshot(s) for 1.basic 1`] = `
<div
  className="lucid-Accordion"
>
  <ExpanderPanel
    Header="Peter Venkman"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="0"
    onToggle={[Function]}
  >
    Peter Venkman, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II and in the animated television series The Real Ghostbusters. In both live action films, he was portrayed by Bill Murray, and was voiced in the animated series first by Lorenzo Music and then by Dave Coulier. He is a parapsychologist and the leader of the Ghostbusters.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Ray Stantz"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="1"
    onToggle={[Function]}
  >
    Raymond "Ray" Stantz, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters, Ghostbusters II, Casper, and the animated television series The Real Ghostbusters. He was portrayed by Dan Aykroyd in both live action films, and voiced by Frank Welker in the animated series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Egon Spengler.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Egon Spengler"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="2"
    onToggle={[Function]}
  >
    Egon Spengler, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II, in the animated television series The Real Ghostbusters, and later in Extreme Ghostbusters. Spengler was portrayed by Harold Ramis in the films and voiced by him in Ghostbusters: The Video Game, and voiced by Maurice LaMarche in the cartoon series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Raymond Stantz.
  </ExpanderPanel>
</div>
`;

exports[`Accordion [common] example testing should match snapshot(s) for 2.initial-index-set 1`] = `
<div
  className="lucid-Accordion"
>
  <ExpanderPanel
    Header="Peter Venkman"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="0"
    onToggle={[Function]}
  >
    Peter Venkman, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II and in the animated television series The Real Ghostbusters. In both live action films, he was portrayed by Bill Murray, and was voiced in the animated series first by Lorenzo Music and then by Dave Coulier. He is a parapsychologist and the leader of the Ghostbusters.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Ray Stantz"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="1"
    onToggle={[Function]}
  >
    Raymond "Ray" Stantz, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters, Ghostbusters II, Casper, and the animated television series The Real Ghostbusters. He was portrayed by Dan Aykroyd in both live action films, and voiced by Frank Welker in the animated series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Egon Spengler.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Egon Spengler"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={true}
    key="2"
    onToggle={[Function]}
  >
    Egon Spengler, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II, in the animated television series The Real Ghostbusters, and later in Extreme Ghostbusters. Spengler was portrayed by Harold Ramis in the films and voiced by him in Ghostbusters: The Video Game, and voiced by Maurice LaMarche in the cartoon series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Raymond Stantz.
  </ExpanderPanel>
</div>
`;

exports[`Accordion [common] example testing should match snapshot(s) for 3.fixed-index 1`] = `
<div
  className="lucid-Accordion"
>
  <ExpanderPanel
    Header="Peter Venkman"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="0"
    onToggle={[Function]}
  >
    Peter Venkman, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II and in the animated television series The Real Ghostbusters. In both live action films, he was portrayed by Bill Murray, and was voiced in the animated series first by Lorenzo Music and then by Dave Coulier. He is a parapsychologist and the leader of the Ghostbusters.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Ray Stantz"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={true}
    key="1"
    onToggle={[Function]}
  >
    Raymond "Ray" Stantz, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters, Ghostbusters II, Casper, and the animated television series The Real Ghostbusters. He was portrayed by Dan Aykroyd in both live action films, and voiced by Frank Welker in the animated series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Egon Spengler.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Egon Spengler"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="2"
    onToggle={[Function]}
  >
    Egon Spengler, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II, in the animated television series The Real Ghostbusters, and later in Extreme Ghostbusters. Spengler was portrayed by Harold Ramis in the films and voiced by him in Ghostbusters: The Video Game, and voiced by Maurice LaMarche in the cartoon series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Raymond Stantz.
  </ExpanderPanel>
</div>
`;

exports[`Accordion [common] example testing should match snapshot(s) for 4.disabled-item 1`] = `
<div
  className="lucid-Accordion"
>
  <ExpanderPanel
    Header="Peter Venkman"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="0"
    onToggle={[Function]}
  >
    Peter Venkman, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II and in the animated television series The Real Ghostbusters. In both live action films, he was portrayed by Bill Murray, and was voiced in the animated series first by Lorenzo Music and then by Dave Coulier. He is a parapsychologist and the leader of the Ghostbusters.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Ray Stantz"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isDisabled={true}
    isExpanded={false}
    key="1"
    onToggle={[Function]}
  >
    Raymond "Ray" Stantz, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters, Ghostbusters II, Casper, and the animated television series The Real Ghostbusters. He was portrayed by Dan Aykroyd in both live action films, and voiced by Frank Welker in the animated series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Egon Spengler.
  </ExpanderPanel>
  <ExpanderPanel
    Header="Egon Spengler"
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="2"
    onToggle={[Function]}
  >
    Egon Spengler, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II, in the animated television series The Real Ghostbusters, and later in Extreme Ghostbusters. Spengler was portrayed by Harold Ramis in the films and voiced by him in Ghostbusters: The Video Game, and voiced by Maurice LaMarche in the cartoon series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Raymond Stantz.
  </ExpanderPanel>
</div>
`;

exports[`Accordion [common] example testing should match snapshot(s) for 5.using-header-as-child 1`] = `
<div
  className="lucid-Accordion"
>
  <ExpanderPanel
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="0"
    onToggle={[Function]}
  >
    <ExpanderPanel.Header>
      Peter Venkman
    </ExpanderPanel.Header>
    Peter Venkman, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II and in the animated television series The Real Ghostbusters. In both live action films, he was portrayed by Bill Murray, and was voiced in the animated series first by Lorenzo Music and then by Dave Coulier. He is a parapsychologist and the leader of the Ghostbusters.
  </ExpanderPanel>
  <ExpanderPanel
    className="lucid-Accordion-Item"
    hasPadding={true}
    isDisabled={true}
    isExpanded={false}
    key="1"
    onToggle={[Function]}
  >
    <ExpanderPanel.Header>
      Ray Stantz
    </ExpanderPanel.Header>
    Raymond "Ray" Stantz, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters, Ghostbusters II, Casper, and the animated television series The Real Ghostbusters. He was portrayed by Dan Aykroyd in both live action films, and voiced by Frank Welker in the animated series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Egon Spengler.
  </ExpanderPanel>
  <ExpanderPanel
    className="lucid-Accordion-Item"
    hasPadding={true}
    isExpanded={false}
    key="2"
    onToggle={[Function]}
  >
    <ExpanderPanel.Header>
      Egon Spengler
    </ExpanderPanel.Header>
    Egon Spengler, Ph.D. is a fictional character from the Ghostbusters franchise. He appears in the films Ghostbusters and Ghostbusters II, in the animated television series The Real Ghostbusters, and later in Extreme Ghostbusters. Spengler was portrayed by Harold Ramis in the films and voiced by him in Ghostbusters: The Video Game, and voiced by Maurice LaMarche in the cartoon series. He is a member of the Ghostbusters and one of the three doctors of parapsychology, along with Dr. Peter Venkman and Dr. Raymond Stantz.
  </ExpanderPanel>
</div>
`;
